Fix so that Reveal Reaction Path does not change victory table spacing

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,18 @@ body {
 .molecule-table tr:hover {
   background-color: #ddd;
 }
+
+.current-container {
+  position: relative;
+}
+
+.reaction-hints-container {
+  float: right;
+  margin-left: 20px;
+}
+
+.current-container::after {
+  content: "";
+  display: table;
+  clear: both;
+}
